--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'LC'
 - !lcsh 'Women -- Education'
 - !lcsh 'Young women'
+- GITenberg
 tableOfContents: '"Studies serve for delight, for ornament, and for ability" -- Real
   readers -- The use of the pen -- Everyday living.'
 title: Talks to Freshman Girls
